Замена space-beetween на margin-right

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <section class="section section-services">
       <div class="container">
-        <h2 class="section-heading no-margin-heading">
+        <h2 class="section-heading">
           Услуги
         </h2>
         <ul class="services-list">
@@ -226,7 +226,7 @@
 
     <section class="section section-advantages">
       <div class="container">
-        <h2 class="section-heading no-margin-heading">
+        <h2 class="section-heading">
           Преимущества
         </h2>
         <ul class="advantages-list">
@@ -284,7 +284,7 @@
 
     <section class="section section-places">
       <div class="container">
-        <h2 class="section-heading no-margin-heading">
+        <h2 class="section-heading">
           Размещение
         </h2>
         <ul class="places-list">
