Ховер эффекты в header

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="container">
 
       <div class="logo-block">
-        <a class="logo" href="#">
+        <a class="logo grow" href="#">
           <img class="logo-img" src="assets/img/logo.png" alt="Lagoona - сеть отелей">
         </a>
-        <a class="phone" href="tel:+74953225448">
+        <a class="phone grow" href="tel:+74953225448">
           +7 495 322 54 48
         </a>
-        <a class="golden-text login" href="#">
+        <a class="golden-text login slide-right" href="#">
           <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
           Личный кабинет
         </a>
