Добавлены ховеры, кастомные свойства

--- a/index.html
+++ b/index.html
@@ -561,12 +561,9 @@
             </div>
           </li>
           <li class="places-item places-more-banner">
-            <a class="places-more-link" href="#">
-              <img class="places-more-img" src="assets/img/41.png" alt="Посмотреть все варианты">
-              <div class="places-more-text">
-                Посмотреть все варианты
-                <span class="places-arrow-icon"></span>
-              </div>
+            <a class="places-more-text" href="#">
+              Посмотреть все варианты
+              <span class="places-arrow-icon"></span>
             </a>
           </li>
         </ul>
@@ -594,11 +591,11 @@
                   Телефоны
                 </h3>
                 <div class="contacts-item-text">
-                  <a class="golden-text" href="tel:+74995356434">
+                  <a class="golden-text contacts-item-link" href="tel:+74995356434">
                     +7 (499) 535-64-34
                   </a>
                   <br>
-                  <a class="golden-text" href="tel:+74950050544">
+                  <a class="golden-text contacts-item-link" href="tel:+74950050544">
                     +7 (495) 005-05-44
                   </a>
                 </div>  
@@ -608,12 +605,12 @@
                   E-mail
                 </h3>
                 <div class="contacts-item-mail">
-                  <a class="golden-text" href="mailto:lg.oona@mail.ru">
+                  <a class="golden-text contacts-item-link" href="mailto:lg.oona@mail.ru">
                     lg.oona@mail.ru
                   </a>
                   по вопросам бронирования
                   <br>
-                  <a class="golden-text" href="mailto:hotels.ln@mail.ru">
+                  <a class="golden-text contacts-item-link" href="mailto:hotels.ln@mail.ru">
                     hotels.ln@mail.ru 
                   </a>
                   по вопросам сотрудничества
@@ -660,7 +657,7 @@
         <p class="footer-info-text">
           Представленная на сайте информация носит справочный характер <br> и не является публичной офертой
         </p>
-        <a class="golden-text" href="#">
+        <a class="golden-text confidence-link" href="#">
           Политика конфиденциальности
         </a>
       </div>
@@ -673,7 +670,7 @@
             +7 (499) 535-64-34
           </a>
           <br>
-          <a class="golden-text" href="tel:+74950050544">
+          <a class="golden-text footer-contacts-link" href="tel:+74950050544">
             +7 (495) 005-05-44
           </a>
         </div>  
