Начало изменения макета под Bootstrap

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lagoona - сеть отелей</title>
   <link rel="stylesheet" href="/assets/css/normalize.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body class="body">
@@ -16,14 +17,16 @@
   <header class="header">
     <div class="container">
 
-      <div class="logo-block">
-        <a class="logo" href="#">
+      <div class="logo-block row">
+        <a class="col-lg-3 logo" href="#">
           <img class="logo-img" src="assets/img/logo.png" alt="Lagoona - сеть отелей">
         </a>
-        <a class="phone" href="tel:+74953225448">
-          +7 495 322 54 48
-        </a>
-        <a class="golden-text login slide-right" href="#">
+        <div class="col-lg-7">
+          <a class="phone" href="tel:+74953225448">
+            +7 495 322 54 48
+          </a>
+        </div>
+        <a class="col-lg-2 golden-text login slide-right" href="#">
           <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
           Личный кабинет
         </a>
