--- a/index.html
+++ b/index.html
@@ -40,42 +40,44 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="nav-block">
-            <nav class="nav col-lg-8">
-              <ul class="nav-list">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    О нас
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    Услуги
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    Преимущества
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    Размещение
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    Блог
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    Контакты
-                  </a>
-                </li>
-              </ul>
-            </nav>
-            <div class="col-lg-4">
-              <input class="search" type="search" name="search" placeholder="Поиск">
+            <div class="nav row">
+              <nav class="col-lg-8">
+                <ul class="nav-list">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      О нас
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Услуги
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Преимущества
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Размещение
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Блог
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Контакты
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+              <div class="col-lg-4">
+                <input class="search" type="search" name="search" placeholder="Поиск">
+              </div>
             </div>
           </div>
         </div>
@@ -740,8 +742,9 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="footer-container">
-            <div class="col-lg-5">
-              <div class="footer-info-container">
+            <div class="row">
+            
+              <div class="col-lg-5 footer-info-container">
                 <p class="footer-info-text">
                   © 2012-2020 Управляющая компания Объединенной сети «Лагуна Хотелс»
                 </p>
@@ -752,52 +755,53 @@
                   Политика конфиденциальности
                 </a>
               </div>
-            </div>
-            <div class="col-lg-6 footer-contacts-container">
-              <address class="footer-contacts-text">
-                11710, улица Юности, дом 5 строение 4, офис 2
-              </address>
-              <div class="footer-contacts-link-block">
-                <a class="golden-text footer-contacts-link" href="tel:+74995356434">
-                  +7 (499) 535-64-34
+
+              <div class="col-lg-6 footer-contacts-container">
+                <address class="footer-contacts-text">
+                  11710, улица Юности, дом 5 строение 4, офис 2
+                </address>
+                <div class="footer-contacts-link-block">
+                  <a class="golden-text footer-contacts-link" href="tel:+74995356434">
+                    +7 (499) 535-64-34
+                  </a>
+                  <br>
+                  <a class="golden-text footer-contacts-link" href="tel:+74950050544">
+                    +7 (495) 005-05-44
+                  </a>
+                </div>  
+                <div class="footer-contacts-link-block">
+                  <a class="golden-text footer-contacts-link" href="mailto:lg.oona@mail.ru">
+                    lg.oona@mail.ru 
+                  </a>
+                  <br>
+                  <a class="golden-text footer-contacts-link" href="mailto:hotels.ln@mail.ru">
+                    hotels.ln@mail.ru
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-lg-1 footer-social-container">
+                <a href="#" class="footer-social-link">
+                  <span class="footer-social-icon trip-icon"></span>
                 </a>
-                <br>
-                <a class="golden-text footer-contacts-link" href="tel:+74950050544">
-                  +7 (495) 005-05-44
+                <a href="#" class="footer-social-link">
+                  <span class="footer-social-icon twitter-icon"></span>
                 </a>
-              </div>  
-              <div class="footer-contacts-link-block">
-                <a class="golden-text footer-contacts-link" href="mailto:lg.oona@mail.ru">
-                  lg.oona@mail.ru 
+                <a href="#" class="footer-social-link">
+                  <span class="footer-social-icon facebook-icon"></span>
                 </a>
-                <br>
-                <a class="golden-text footer-contacts-link" href="mailto:hotels.ln@mail.ru">
-                  hotels.ln@mail.ru
+                <a href="#" class="footer-social-link">
+                  <span class="footer-social-icon vk-icon"></span>
+                </a>
+                <a href="#" class="footer-social-link">
+                  <span class="footer-social-icon google-icon"></span>
                 </a>
               </div>
             </div>
-            <div class="col-lg-1 footer-social-container">
-              <a href="#" class="footer-social-link">
-                <span class="footer-social-icon trip-icon"></span>
-              </a>
-              <a href="#" class="footer-social-link">
-                <span class="footer-social-icon twitter-icon"></span>
-              </a>
-              <a href="#" class="footer-social-link">
-                <span class="footer-social-icon facebook-icon"></span>
-              </a>
-              <a href="#" class="footer-social-link">
-                <span class="footer-social-icon vk-icon"></span>
-              </a>
-              <a href="#" class="footer-social-link">
-                <span class="footer-social-icon google-icon"></span>
-              </a>
-            </div>
+          </div>
         </div>
-        </div>
-      </div>
-      
-    </div>
+      </div>      
+    </div> 
   </footer>
 
 </body>
